--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,5 +76,6 @@
         "variant": "cpp",
         "algorithm": "cpp",
         "version": "cpp"
-    }
+    },
+    "commentTranslate.hover.enabled": true
 }
