重构代码模板，简化 template(simple).cpp，更新 README.md，新增 template.cpp 文件，添加完整的 C++ 模板和打印宏定义

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,8 @@
         "algorithm": "cpp",
         "version": "cpp",
         "memory": "cpp",
-        "print": "cpp"
+        "print": "cpp",
+        "iterator": "cpp"
     },
     "commentTranslate.hover.enabled": true,
     "C_Cpp.default.compilerPath": "/usr/bin/clang++"
