Add various solutions for competitive programming problems
- Implement solution for HDOJ problem 不要_62 using digit dynamic programming.
- Add solution for HDOJ problem 交通管控 utilizing modular arithmetic and combinatorial techniques.
- Create solution for HDOJ problem 飞车狂飙 involving coordinate tracking and state management.
- Develop Leetcode problem 2999 solution focusing on powerful integers within a range.
- Implement 洛谷 problem P1171 售货员的难题 using dynamic programming for optimal path finding.
- Add solution for 洛谷 problem P_1379_八数码难题 using BFS for state exploration.
- Create solution for 洛谷 problem P_2602_ZJOI_2010_数字计数 using digit counting techniques.
- Implement 洛谷 problem P_8591_JROI_8_颅脑损伤_2_0 using sorting and dynamic programming.
- Add solution for 洛谷 problem P_8592_JROI_8_颅脑损伤_2_0_加强版 using segment trees for range queries.
- Develop 洛谷 problem SAC_1_萌数 using combinatorial counting with digit constraints.
- Implement 洛谷 problem windy_数 focusing on digit dynamic programming with constraints.
- Create solution for 洛谷 problem 同类分布 using dynamic programming for sum constraints.
- Add a simple C template for competitive programming.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,22 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug",
+            "name": "Run_cpp",
             "terminal": "integrated",
             "program": "${workspaceFolder}/${fileBasenameNoExtension}",
             "args": [],
             "cwd": "${workspaceFolder}",
-            "preLaunchTask": "build" //调试前增加编译
-        }
+            "preLaunchTask": "build_cpp"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Run_C",
+            "terminal": "integrated",
+            "program": "${workspaceFolder}/${fileBasenameNoExtension}",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "build_C"
+        },
     ]
 }
