--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "build_cpp",
             "type": "shell",
             "command": "/usr/bin/clang++",
             "args": [
@@ -19,28 +19,21 @@
             "detail": "Generated task by Debugger."
         },
         {
-            "type": "cppbuild",
-            "label": "C/C++: clang++ 生成活动文件",
-            "command": "/usr/bin/clang++",
+            "label": "build_C",
+            "type": "shell",
+            "command": "/usr/bin/clang",
             "args": [
-                "-fcolor-diagnostics",
-                "-fansi-escape-codes",
+                "-std=c17",
                 "-g",
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
-            "options": {
-                "cwd": "${fileDirname}"
-            },
+            "group": "build",
             "problemMatcher": [
                 "$gcc"
             ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "detail": "调试器生成的任务。"
-        }
+            "detail": "Generated task by Debugger."
+        },
     ]
 }
