Add various algorithm implementations and a template for competitive programming
- Created a comprehensive template file for competitive programming in C++.
- Implemented KMP algorithm for substring search in `KMP.cpp`.
- Developed a solution for counting distinct intervals in `区间种类数.cpp` using a Fenwick Tree.
- Added merge sort implementation in `归并排序.cpp`.
- Implemented quicksort algorithm in `快速排序.cpp`.
- Developed a Fenwick Tree (Binary Indexed Tree) solution in `树状数组.cpp`.
- Created a standard template file `standard.cpp` for future algorithm implementations.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,8 +78,13 @@
         "version": "cpp",
         "memory": "cpp",
         "print": "cpp",
-        "iterator": "cpp"
+        "iterator": "cpp",
+        "concepts": "cpp"
     },
     "commentTranslate.hover.enabled": true,
-    "C_Cpp.default.compilerPath": "/usr/bin/clang++"
+    "C_Cpp.default.compilerPath": "/usr/bin/clang++",
+    "python-envs.defaultEnvManager": "ms-python.python:conda",
+    "python-envs.defaultPackageManager": "ms-python.python:conda",
+    "python-envs.pythonProjects": [],
+    "editor.fontSize": 13
 }
