--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "name": "Run_cpp",
             "terminal": "integrated",
-            "program": "${workspaceFolder}/${fileBasenameNoExtension}",
+            "program": "${workspaceFolder}/${fileBasenameNoExtension}_exe",
             "args": [],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "build_cpp"
@@ -16,10 +16,23 @@
             "request": "launch",
             "name": "Run_C",
             "terminal": "integrated",
-            "program": "${workspaceFolder}/${fileBasenameNoExtension}",
+            "program": "${workspaceFolder}/${fileBasenameNoExtension}_exe",
             "args": [],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "build_C"
         },
+        {
+            "name": "C/C++: clang++ 构建和调试活动文件",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${fileDirname}/${fileBasenameNoExtension}",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "lldb",
+            "preLaunchTask": "C/C++: clang++ 生成活动文件"
+        }
     ]
 }
