--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,15 +8,21 @@
             "args": [
                 "-std=c++23",
                 "-g",
-                "${file}",
+                "-O2",
+                "-Wall",
+                "-Wextra",
+                "-Wno-unused-variable",
+                "-Wno-unused-const-variable",
+                "-Wno-unused-parameter",
+                "\"${file}\"",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "\"${fileDirname}/${fileBasenameNoExtension}_exe\""
             ],
             "group": "build",
             "problemMatcher": [
                 "$gcc"
             ],
-            "detail": "Generated task by Debugger."
+            "detail": "C++ compiler with optimization and warnings"
         },
         {
             "label": "build_C",
@@ -25,15 +31,41 @@
             "args": [
                 "-std=c17",
                 "-g",
-                "${file}",
+                "-O2",
+                "\"${file}\"",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "\"${fileDirname}/${fileBasenameNoExtension}_exe\""
             ],
             "group": "build",
             "problemMatcher": [
                 "$gcc"
             ],
-            "detail": "Generated task by Debugger."
+            "detail": "C compiler with path fix and optimization"
         },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: clang++ 生成活动文件",
+            "command": "/usr/bin/clang++",
+            "args": [
+                "-std=c++23",
+                "-fcolor-diagnostics",
+                "-fansi-escape-codes",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "调试器生成的任务。"
+        }
     ]
 }
